--- a/system/templates/apps/character-builder.html
+++ b/system/templates/apps/character-builder.html
@@ -45,7 +45,47 @@
 
             <div class="fatex__vertical_tabs__content">
                 <div class="fatex__vertical_tabs__tab tab" data-tab="core">
-                    <div class="fatex__vertical_tabs__tab__content"></div>
+                    <div class="fatex__vertical_tabs__tab__content">
+                        <h2 class="fatex__character_builder__headline">Import Core</h2>
+
+                        <div class="fatex__character_builder__group">
+                            <div class="fatex__headline">
+                                Aspects
+                            </div>
+
+                            <div class="fatex__character_builder__options">
+                                <label class="fatex__character_builder__option">
+                                    <input class="fatex__character_builder__option__checkbox" type="checkbox">
+                                    <div class="fatex__character_builder__option__box"></div>
+                                    <span class="fatex__character_builder__option__label">High concept</span>
+                                </label>
+
+                                <label class="fatex__character_builder__option">
+                                    <input class="fatex__character_builder__option__checkbox" type="checkbox">
+                                    <div class="fatex__character_builder__option__box"></div>
+                                    <span class="fatex__character_builder__option__label">Trouble</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="fatex__character_builder__group">
+                            <div class="fatex__headline">
+                                Consequences
+                            </div>
+                        </div>
+
+                        <div class="fatex__character_builder__group fatex__character_builder__group--columns">
+                            <div class="fatex__headline">
+                                Skills
+                            </div>
+                        </div>
+
+                        <div class="fatex__character_builder__group">
+                            <div class="fatex__headline">
+                                Stress tracks
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="fatex__vertical_tabs__tab tab" data-tab="accelarated">
