--- a/src/scss/components/settings/settings.scss
+++ b/src/scss/components/settings/settings.scss
@@ -36,7 +36,6 @@
     padding: $component-padding / 2;
 }
 
-
 .fatex__setting__radio__group--ranks {
     padding: 0 $component-padding;
 
@@ -80,7 +79,7 @@
 }
 
 .fatex__setting__radio--active {
-    background: rgba(0,0,0,0.05);
+    background: rgba(0, 0, 0, 0.05);
 }
 
 .fatex__setting__help {
