--- a/src/scss/components/sheet/app-sheet.scss
+++ b/src/scss/components/sheet/app-sheet.scss
@@ -16,7 +16,7 @@
     }
 
     img {
-        border: 0
+        border: 0;
     }
 
     input[type="text"] {
@@ -35,5 +35,3 @@
         padding: 0;
     }
 }
-
-
