--- a/src/scss/components/skills/skills.scss
+++ b/src/scss/components/skills/skills.scss
@@ -1,4 +1,5 @@
-.fatex__skills {}
+.fatex__skills {
+}
 
 .fatex__skills--columns {
     .fatex__skills__columns {
@@ -81,4 +82,3 @@
     margin-bottom: 0;
     cursor: pointer;
 }
-
