--- a/src/scss/extras/fonts.scss
+++ b/src/scss/extras/fonts.scss
@@ -1,47 +1,54 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-Regular.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-Regular.otf");
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-Italic.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-Italic.otf");
     font-style: italic;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-Light.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-Light.otf");
     font-weight: 300;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-LightItalic.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-LightItalic.otf");
     font-style: italic;
     font-weight: 300;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-Bold.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-Bold.otf");
     font-weight: bold;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-BoldItalic.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-BoldItalic.otf");
     font-style: italic;
     font-weight: bold;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-Black.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-Black.otf");
     font-weight: 900;
 }
+
 @font-face {
-    font-family: 'Montserrat';
-    src: url('/systems/fatex/assets/fonts/Montserrat-BlackItalic.otf');
+    font-family: "Montserrat";
+    src: url("/systems/fatex/assets/fonts/Montserrat-BlackItalic.otf");
     font-style: italic;
     font-weight: 900;
 }
 
 @font-face {
-    font-family: 'Fate Icons';
-    src: url('/systems/fatex/assets/fonts/fate_icons.ttf');
+    font-family: "Fate Icons";
+    src: url("/systems/fatex/assets/fonts/fate_icons.ttf");
 }
