--- a/src/scss/extras/mixins.scss
+++ b/src/scss/extras/mixins.scss
@@ -1,14 +1,21 @@
 @mixin cutoff($size: 10px, $onlytop: 0) {
-
     @if $onlytop == 0 {
-        clip-path: polygon(0 $size, $size 0%, 100% 0%, 100% 0%, 100% calc(100% - #{$size}), calc(100% - #{$size}) 100%, 0 100%, 0 100%);
+        clip-path: polygon(
+            0 $size,
+            $size 0%,
+            100% 0%,
+            100% 0%,
+            100% calc(100% - #{$size}),
+            calc(100% - #{$size}) 100%,
+            0 100%,
+            0 100%
+        );
     }
 
     @if $onlytop == 1 {
         clip-path: polygon(0 0, calc(100% - #{$size}) 0, 100% calc(100% - #{$size}), 100% 100%, 0 100%);
     }
 }
-
 
 @mixin fa-icon($icon_name) {
     &:before {
@@ -30,7 +37,12 @@
     align-items: center;
 
     background: $background-color;
-    background: linear-gradient(90deg, transparentize($background-color, 1) 0%, $background-color 33%, $background-color 100%);
+    background: linear-gradient(
+        90deg,
+        transparentize($background-color, 1) 0%,
+        $background-color 33%,
+        $background-color 100%
+    );
 
     position: absolute;
     height: 100%;
