--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -14,7 +14,6 @@ $header-background: $primary-color;
 $header-font-color: rgb(255, 255, 255);
 $header-shadow-color: rgba(47, 53, 66, 1);
 
-
 $headline-background: $primary-color;
 $headline-color: rgb(255, 255, 255);
 
@@ -22,4 +21,4 @@ $caution-color: rgb(242, 22, 40);
 $shadow-color: rgb(160, 160, 160);
 
 // Fonts
-$primary-font: 'Montserrat', sans-serif;
+$primary-font: "Montserrat", sans-serif;
