--- a/src/scss/components/scrollbar/scrollbar.scss
+++ b/src/scss/components/scrollbar/scrollbar.scss
@@ -19,7 +19,7 @@
     scrollbar-color: $primary-color $sheet-background !important;
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
     background: $primary-color;
     width: 18px;
     cursor: pointer;
@@ -27,7 +27,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: -10px;
 }
 
-input[type=range]::-moz-range-thumb {
+input[type="range"]::-moz-range-thumb {
     background: $primary-color;
     height: 25px;
     width: 18px;
