--- a/src/scss/components/sheet/sheet.scss
+++ b/src/scss/components/sheet/sheet.scss
@@ -19,7 +19,7 @@
     }
 
     img {
-        border: 0
+        border: 0;
     }
 
     input[type="text"] {
@@ -31,5 +31,3 @@
         border-color: $primary-color;
     }
 }
-
-
