--- a/src/scss/components/tabs/tabs.scss
+++ b/src/scss/components/tabs/tabs.scss
@@ -17,7 +17,7 @@
 .fatex__tabs__navigation__item {
     color: $primary-color;
 
-    padding: 5px 20px 5px 15px ;
+    padding: 5px 20px 5px 15px;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 13px;
@@ -25,7 +25,8 @@
     // Remove whitespace between tab-handler and bar
     margin-bottom: -1px;
 
-    &.active, &:hover {
+    &.active,
+    &:hover {
         background: $headline-background;
         color: $headline-color;
         @include cutoff(15px, 1);
@@ -49,6 +50,5 @@
             flex-grow: 1;
             padding-left: $component-padding;
         }
-
     }
 }
