--- a/src/scss/extras/fontawesome.scss
+++ b/src/scss/extras/fontawesome.scss
@@ -3,7 +3,7 @@
 
 // Convenience function used to set content property
 @function fa-content($fa-var) {
-  @return unquote("\"#{ $fa-var }\"");
+    @return unquote('"#{ $fa-var }"');
 }
 
 $fa-var-500px: \f26e;
