Added prettier and more

--- a/src/scss/components/apps/builder/builder.scss
+++ b/src/scss/components/apps/builder/builder.scss
@@ -82,6 +82,14 @@
     padding: $component-padding;
 }
 
+.fatex__character_builder__options--columns {
+    column-count: 2;
+
+    label {
+        page-break-inside: avoid;
+    }
+}
+
 .fatex__character_builder__option {
     display: flex;
 }
