--- a/system/templates/apps/character-builder.html
+++ b/system/templates/apps/character-builder.html
@@ -15,60 +15,47 @@
 
         <div class="fatex__vertical_tabs">
             <nav class="fatex__vertical_tabs__navigation">
-                {{#each availableSystems as |system machineName|}}
-                    <a class="fatex__vertical_tabs__navigation__item item" data-tab="{{machineName}}">{{system}}</a>
+                {{#each systems as |system|}}
+                    <a class="fatex__vertical_tabs__navigation__item item" data-tab="{{system.identifier}}">{{system.name}}</a>
                 {{/each}}
             </nav>
 
             <div class="fatex__vertical_tabs__content">
                 {{#each systems as |system|}}
-                    {{#if system.aspects}}
-                        <div class="fatex__vertical_tabs__tab tab" data-tab="{{system.name}}">
-                            <div class="fatex__vertical_tabs__tab__content">
-                                <div class="fatex__character_builder__group">
+                    <div class="fatex__vertical_tabs__tab tab" data-tab="{{system.identifier}}">
+                        <div class="fatex__vertical_tabs__tab__content">
+
+                            {{#each system.types as |type typeLabel|}}
+                                <div class="fatex__character_builder__type">
                                     <div class="fatex__headline">
-                                        {{localize "FAx.Sheet.Aspects"}}
+                                        {{typeLabel}}
                                     </div>
 
-                                    <div class="fatex__character_builder__options">
-                                        {{#each system.aspects as |aspect index|}}
-                                            <label class="fatex__character_builder__option">
-                                                <input class="fatex__character_builder__option__checkbox"
-                                                       type="checkbox">
-                                                <div class="fatex__character_builder__option__box"></div>
-                                                <span
-                                                    class="fatex__character_builder__option__label">{{aspect.name}}</span>
-                                            </label>
+                                    <div class="fatex__character_builder__groups">
+                                        {{#each type as |group groupIndex|}}
+                                            <div class="fatex__character_builder__group">
+                                                {{#if group.label}}
+                                                    <span class="fatex__character_builder__group__label">
+                                                        {{group.label}}
+                                                    </span>
+                                                {{/if}}
+
+                                                <div class="fatex__character_builder__options {{#if group.columns}}fatex__character_builder__options--columns{{/if}}">
+                                                    {{#each group.entries as |entry entryIndex|}}
+                                                        <label class="fatex__character_builder__option">
+                                                            <input class="fatex__character_builder__option__checkbox" type="checkbox">
+                                                            <span class="fatex__character_builder__option__box"></span>
+                                                            <span class="fatex__character_builder__option__label">{{entry.name}}</span>
+                                                        </label>
+                                                    {{/each}}
+                                                </div>
+                                            </div>
                                         {{/each}}
                                     </div>
                                 </div>
-                            </div>
+                            {{/each}}
                         </div>
-                    {{/if}}
-
-                    {{#if system.skills}}
-                        <div class="fatex__vertical_tabs__tab tab" data-tab="{{system.name}}">
-                            <div class="fatex__vertical_tabs__tab__content">
-                                <div class="fatex__character_builder__group">
-                                    <div class="fatex__headline">
-                                        {{localize "FAx.Sheet.Skills"}}
-                                    </div>
-
-                                    <div class="fatex__character_builder__options fatex__character_builder__options--columns">
-                                        {{#each system.skills as |skill index|}}
-                                            <label class="fatex__character_builder__option">
-                                                <input class="fatex__character_builder__option__checkbox"
-                                                       type="checkbox">
-                                                <div class="fatex__character_builder__option__box"></div>
-                                                <span
-                                                    class="fatex__character_builder__option__label">{{skill.name}}</span>
-                                            </label>
-                                        {{/each}}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {{/if}}
+                    </div>
                 {{/each}}
             </div>
         </div>
