--- a/system/templates/apps/sheet-setup.html
+++ b/system/templates/apps/sheet-setup.html
@@ -1,17 +1,17 @@
 {{> "systems/fatex/templates/apps/parts/layout/app-header.html"
-    title="FAx.Apps.Builder.Title"
+    title="FAx.Apps.Setup.Title"
 }}
 
-<div class="fatex__character_builder">
+<div class="fatex__sheet_setup">
 
-    <div class="fatex__character_builder__manage">
-        <h2>{{localize "FAx.Apps.Builder.Manage"}}</h2>
+    <div class="fatex__sheet_setup__manage">
+        <h2>{{localize "FAx.Apps.Setup.Manage"}}</h2>
 
-        {{> "systems/fatex/templates/apps/parts/builder/actions.html" }}
+        {{> "systems/fatex/templates/apps/parts/setup/actions.html" }}
     </div>
 
-    <div class="fatex__character_builder__import">
-        <h2>{{localize "FAx.Apps.Builder.Import"}}</h2>
+    <div class="fatex__sheet_setup__setup">
+        <h2>{{localize "FAx.Apps.Setup.Setup"}}</h2>
 
         <div class="fatex__vertical_tabs">
             <nav class="fatex__vertical_tabs__navigation">
@@ -26,26 +26,26 @@
                         <div class="fatex__vertical_tabs__tab__content">
 
                             {{#each system.types as |type typeLabel|}}
-                                <div class="fatex__character_builder__type">
+                                <div class="fatex__sheet_setup__type">
                                     <div class="fatex__headline">
                                         {{typeLabel}}
                                     </div>
 
-                                    <div class="fatex__character_builder__groups">
+                                    <div class="fatex__sheet_setup__groups">
                                         {{#each type as |group groupIndex|}}
-                                            <div class="fatex__character_builder__group">
+                                            <div class="fatex__sheet_setup__group {{#if group.columns}}fatex__sheet_setup__group--columns{{/if}}">
                                                 {{#if group.label}}
-                                                    <span class="fatex__character_builder__group__label">
+                                                    <span class="fatex__sheet_setup__group__label">
                                                         {{group.label}}
                                                     </span>
                                                 {{/if}}
 
-                                                <div class="fatex__character_builder__options {{#if group.columns}}fatex__character_builder__options--columns{{/if}}">
+                                                <div class="fatex__sheet_setup__options {{#if group.columns}}fatex__sheet_setup__options--columns{{/if}}">
                                                     {{#each group.entries as |entry entryIndex|}}
-                                                        <label class="fatex__character_builder__option">
-                                                            <input class="fatex__character_builder__option__checkbox" type="checkbox">
-                                                            <span class="fatex__character_builder__option__box"></span>
-                                                            <span class="fatex__character_builder__option__label">{{entry.name}}</span>
+                                                        <label class="fatex__sheet_setup__option">
+                                                            <input class="fatex__sheet_setup__option__checkbox" type="checkbox">
+                                                            <span class="fatex__sheet_setup__option__box"></span>
+                                                            <span class="fatex__sheet_setup__option__label">{{entry.name}}</span>
                                                         </label>
                                                     {{/each}}
                                                 </div>
